# holocubic-apps

./: .gitignore  README.md  README_LUA.md  README_LVGL.md
2048/package/: app.info  info.html  main.lua
BTC/: README.md  app.info  backend.lua  ui.lua
BTC/package/: app.info  backend.lua  i18n.lua  info.html  main.lua  ui.lua  web.lua
ConwayLife/package/: app.info  info.html  main.lua
FluidPendant/package/: app.info  info.html  main.lua
MatrixRain/package/: app.info  info.html  main.lua
NixieClock/package/: app.info  info.html  main.lua
Spectrum/package/: app.info  fft.lua  info.html  main.lua  ui.lua
aida_monitor/: .gitignore  README.md  REMOTE_SENSOR_PROTOCOL.md
aida_monitor/package/: aida_client.lua  aida_layout.lua  aida_pager.lua  aida_renderer.lua  aida_vector_font.lua  app.info  config.lua  holo-aida-template.txt  info.html  main.lua  web.lua
aida_monitor/src/: CMakeLists.txt  sdkconfig.defaults
aida_monitor/src/main/: CMakeLists.txt  font_module.c
aida_monitor/tests/: protocol_test.lua
aida_monitor/tests/fixtures/: remotesensor-layout.html  remotesensor-layout.lua  remotesensor-probe.ini
aida_monitor/tools/: build_vector_font.py  probe_remotesensor.py  render_layout_previews.py
devtools/package/: app.info  info.html  main.lua
devtools/tests/: reload_api_test.lua
holo_pc_monitor/: README.md  hex_dashboard_320x240.html
holo_pc_monitor/package/: aida_client.lua  app.info  config.lua  holo-aida-required-metrics.rslcd  holo-aida.rslcd  info.html  main.lua  web.lua
launcher/package/: app.info  info.html  main.html  main.lua
launcher/package/services/display_service/: app.info  main.lua
launcher/src/: README.md
mp3_player/package/: app.info  info.html  main.lua  ui.lua
mp3_player/src/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  probe.lua  sdkconfig.defaults
mp3_player/src/legacy/music_player_package/: app.info.legacy  info.html  main.lua  ui copy.lua  ui.lua
mp3_player/src/legacy/music_player_package/font/: build_msyh_music_fonts.ps1  common_hanzi_4000.txt  msyh_cn_4000_charset.txt  refresh_common_4000_charset.py
mp3_player/src/main/: CMakeLists.txt  audio_module.c  idf_component.yml  module_abi.h
photos/package/: app.info  info.html  photos.lua
plane/package/: app.info  info.html  main.lua
settings/package/: app.info  info.html  main.lua
settings/package/font/: build_settings_cn_3000.ps1  settings_used_cn.txt
tools/: build_i18n_fonts.ps1  charset_ja.txt  charset_zh_cn.txt  charset_zh_tw.txt  generate_i18n_charsets.py
videos/package/: app.info  info.html  videos.lua
weather/: api.lua  app.info  config.lua  info.html  main.lua  ui.lua
weather/package/: app.info  info.html  main.lua  time.lua
wifi_guide/package/: README.md  app.info  info.html  main.html  main.lua  success.html
xiaozhi-service/package/: activation.lua  app.info  identity.lua  info.html  protocol.lua  runtime.lua
xiaozhi/package/: README.md  activation.lua  app.info  audio.lua  config.example.json  config.lua  identity.lua  info.html  main.lua  mcp.lua  mic_diag.lua  protocol.lua  runtime.lua  state.lua  ui.lua
xiaozhi/package/mcp/: device.lua
xiaozhi/src/: AGENTS.md  CMakeLists.txt  README.md  module_abi.h  sdkconfig  sdkconfig.defaults  xiaozhi_so.ld
xiaozhi/src/diag/: manual_left_raw_32.i2s  manual_left_stats.txt  manual_right_raw_32.i2s  manual_right_stats.txt
xiaozhi/src/main/: CMakeLists.txt  idf_component.yml  xiaozhi_module.c
xiaozhi/src/wake/: CMakeLists.txt  README.md  build_sd_models.ps1  exports.map  probe.lua  sdkconfig  sdkconfig.defaults  wake_probe.lua  wake_so.ld
xiaozhi/src/wake/main/: CMakeLists.txt  idf_component.yml  wake_module.c
